--- a/app.main/src/main/res/layout/activity_plug.xml
+++ b/app.main/src/main/res/layout/activity_plug.xml
@@ -18,11 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Small Android" />
+        android:text="Small Android Version 1" />
 
     <TextView
         style="@style/StyleTextViewSubTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Small 插件化方案适用于将一个APK拆分为多个公共库插件、业务模块插件的场景。" />
+
 </LinearLayout>
