--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -27,4 +27,14 @@
         android:text="Start Stub Demo Activity"
         android:textColor="@android:color/white" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_margin="10dp"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:onClick="loadUpgrade"
+        android:text="Upgrade"
+        android:textColor="@android:color/white" />
+
 </LinearLayout>
